--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "tmpjr/pubmed",
+    "name": "v4lerio/pubmed",
     "type": "library",
     "description": "Wrapper API for the NCBI PubMed EFetch Utilities developed at Ambry Genetics and made public for use by the community.",
     "keywords": ["ncbi","pubmed","wrapper","api"],
-    "homepage": "https://github.com/tmpjr/pubmed",
+    "homepage": "https://github.com/v4lerio/laravel-pubmed",
     "license": "MIT",
     "authors": [
         {
@@ -15,7 +15,12 @@
             "name": "Tom Ploskina Jr.",
             "email": "tploskinajr@gmail.com",
             "homepage": "https://github.com/tmpjr"
-        }   	
+        }   	,
+        {
+            "name": "Valerio Cestrone",
+            "email": "",
+            "homepage": ""
+        }
     ],
     "require": {
         "php": ">=5.3.0"
