--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
         "psr-0": {
             "PubMed": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
